--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         frames: 75,
         sense: -1, 
         responsive: true,
-        animate: false
+        animate: false,
+        orientation: 'vertical' // This tells the plugin to scroll vertically through the frames
     });
 </script>
 
